2007-05-25  Boyd Timothy <btimothy@gmail.com> 

	* Banter.mdp, Banter/Makefile.am: Add StatusEntry.cs.
	* Banter/StatusEntry.cs: New widget to provide cleaner setting of
	  online status.
	* Banter/GroupWindow.cs: Took the old Gtk.Entry statusEntry out and now
	  use the StatusEntry widget.

2007-05-25  Brady Anderson <banderso@novell.com> 

	* Banter/Account.cs: removed printing the Disconnect exception message
	  since it happens every time.
	* Banter/Conversation.cs: Added system messages for presence changes
	  with a peer.

2007-05-25  Boyd Timothy <btimothy@gmail.com> 

	* Banter/GroupWindow.cs: Removed the frame around the statusEntry.

2007-05-25  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Presence.cs: Added text for Presence types
	* Banter/Person.cs: Added a SetStatus to update the presence.Message
	* Banter/ChatWindow.cs: Added ability to set presence messages using
	  /status in chat window
	* Banter/GroupWindow.cs: Added Entry to set status
	* Banter/ProviderUser.cs: Added ability to set status on a connection

2007-05-25  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Person.cs: Updated the IsSelf to be IsMe in Person and it
	  works now
	* Banter/PersonManager.cs: Updated the Me property so it will find the
	  Person object that is me and cache it off

2007-05-25  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Conversation.cs: Changed GetReceivedMessages() so it doesn't
	  return null.  Just return a blank array if there are no messages

2007-05-25  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp, Banter/PersonGroup.cs, Banter/Account.cs,
	  Banter/Application.cs, Banter/ChatWindow.cs, Banter/PersonStore.cs,
	  Banter/GroupWindow.cs, Banter/PersonManager.cs,
	  Banter/PersonSync.cs, Banter/Makefile.am: Renamed PersonStore to
	  PersonManager
	* Banter/ProviderUserManager.cs: Moved the GetMe call to a Me property

2007-05-24  Brady Anderson <banderso@novell.com> 

	* Banter/ChatWindow.cs, Banter/Conversation.cs: Added code to retrieve